--- a/typst.toml
+++ b/typst.toml
@@ -1,6 +1,6 @@
 [package]
-name = "palettes"
-version = "0.3.0"
+name = "splash"
+version = "0.4.0"
 entrypoint = "src/palettes.typ"
 authors = ["kaarmu"]
 license = "MIT"
